# wml

./: .gitignore  README.md  alembic.ini  database.py  docker-compose.yml  main.py  pyproject.toml  repository.py  requirements.txt  router.py  schemas.py
app/: main.py  repository.py  router.py  schemas.py
backend/: .dockerignore  Dockerfile  alembic.ini  config.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  repository.py  router.py  schemas.py
backend/api/: config.py  main.py  models.py  repository.py  router.py  s3.py  schemas.py
backend/api/docker/: dev.app.sh
backend/docker/: dev.app.sh
backend/docs/: with_builder.Dockerfile
backend/migrations/: env.py
backend/migrations/versions/: 2024_09_30_1341-6aa1a4102f5b_create_products_table.py  2024_11_18_2149-7f03001fdc0c_added_shops_table.py
backend/tests/: conftest.py  fill_empty_db.py  test_product_api.py
docs/: with_builder.Dockerfile
frontend/: .dockerignore  .prettierignore  .prettierrc.json  Dockerfile  app.vue  docker-compose.yml  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/api/: index.ts
frontend/assets/styles/: _variables.scss  main.scss  media.scss
frontend/layouts/: custom.vue
frontend/pages/: index.vue
frontend/plugins/: VeeValidateConfig.ts
frontend/services/ProductsServices/: ProductsService.ts
frontend/types/: index.types.ts
migrations/: env.py
migrations/versions/: 2024-09-27_f61ccd545055_db_creation.py  2024_09_30_1341-6aa1a4102f5b_create_products_table.py
tests/: conftest.py  fill_empty_db.py
(+10 files in other folders)
